--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,7 +21,7 @@ env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
-  IMAGE_NAME: imagebuilder
+  IMAGE_NAME: "${{ github.repository_owner }}/openwrt-forks-imagebuilder"
 
 
 jobs:
